// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography snapshots should render empty 1`] = `<DocumentFragment />`;

exports[`Typography snapshots should render with passed inner html 1`] = `
<DocumentFragment>
  <p
    class="Typography Typography--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--p Typography--p--light Typography--without-margin Typography--without-margin--light"
    data-test-text=""
    style="text-align: inherit;"
  />
  <div>
    innerHtml
  </div>
  <p />
</DocumentFragment>
`;

exports[`Typography snapshots should render with some text 1`] = `
<DocumentFragment>
  <p
    class="Typography Typography--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--p Typography--p--light Typography--without-margin Typography--without-margin--light"
    data-test-text=""
    style="text-align: inherit;"
  >
    Text
  </p>
</DocumentFragment>
`;
